# cookiecutter-dvc-plugin

./: README.md  cookiecutter.json
dvc-{{cookiecutter.plugin_name}}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  README.rst  pyproject.toml  setup.cfg
dvc-{{cookiecutter.plugin_name}}/.github/workflows/: release.yaml  tests.yaml  update-template.yaml
dvc-{{cookiecutter.plugin_name}}/dvc_{{cookiecutter.plugin_name}}/tests/: cloud.py  conftest.py  fixtures.py  test_dvc.py
hooks/: post_gen_project.py
