[build-system]
requires = ["setuptools>=48", "wheel", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "dvc_{{cookiecutter.plugin_name}}/_dvc_{{cookiecutter.plugin_name}}_version.py"

[tool.pytest.ini_options]
log_level = "debug"
addopts = "-ra"
markers = [
    "needs_internet: Might need network access for the tests",
]

[tool.mypy]
# Error output
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
pretty = true
# See https://mypy.readthedocs.io/en/latest/running_mypy.html#missing-imports.
ignore_missing_imports = true
check_untyped_defs = false
# Warnings
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
files = ["dvc_{{cookiecutter.plugin_name}}"]
